Maybe fix scrolling on mobile and refactor xs screens

--- a/css/style.css
+++ b/css/style.css
@@ -344,9 +344,9 @@ footer a {
 
   @media (max-width: 320px) and (max-height: 568px) {
     header .container #branding h1 {
-      font-size: 26px;
+      font-size: 22px;
       margin-bottom: 5px;
-      padding-top: 5px;
+      padding-top: 10px;
     }
 
     header .container nav ul {
@@ -355,8 +355,8 @@ footer a {
 
     header .container nav ul li {
       font-size: 16px;
-      padding-top: 2px;
-      padding-bottom: 2px;
+      padding-top: 1px;
+      padding-bottom: 1px;
     }
 
     
@@ -389,7 +389,7 @@ footer a {
     #work .container .content p,
     #contact .container p {
       font-size: 18px;
-      margin-top: 12px;
+      margin-top: 4px;
     }
 
     #contact .container p {
@@ -400,8 +400,9 @@ footer a {
       padding: 3px;
     }
 
-    #contact .container form textarea {
-      margin-bottom: 0;
+    #contact .container form input[type=text],
+#contact .container form textarea {
+      margin-bottom: 5px;
     }
 
     footer ul {
